# mirellabatista-com-backend

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
lambda/: lambda_function.py
terraform/: main.tf  outputs.tf  provider.tf  variables.tf
tests/: test_lambda_function.py
